--- a/OpenCore/config.plist
+++ b/OpenCore/config.plist
@@ -2167,7 +2167,7 @@
 			<key>AdviseFeatures</key>
 			<true/>
 			<key>MLB</key>
-			<string>C02936501GUJG36AD</string>
+			<string></string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
@@ -2181,9 +2181,9 @@
 			<key>SystemProductName</key>
 			<string>iMacPro1,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C02ZCUZYHX87</string>
+			<string></string>
 			<key>SystemUUID</key>
-			<string>8D591785-48AC-4510-9D54-4468A37393B9</string>
+			<string></string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
